new AndroCoins version

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                             <div class="row-fluid">
                                     <div class="span6">
                                         <div class="cropped_pics">
-                                            <img src="imgs/new/a_appmenu_crop.png"/>
-                                            <img src="imgs/new/a_report_crop.png"/>
+                                            <img src="imgs/a_appmenu_crop.png"/>
+                                            <img src="imgs/a_report_crop.png"/>
                                         </div>
                                     </div>
                                     <div class="span6">
