--- a/projects.html
+++ b/projects.html
@@ -79,24 +79,24 @@
                             <div class="row-fluid">
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_dash.png" alt="AndroCoins Dashboard" />
+                                        <img src="imgs/a_menu.png" alt="AndroCoins Dashboard" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_reps.png" alt="AndroCoins Dashboard" />
+                                        <img src="imgs/a_today.png" alt="AndroCoins Dashboard" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_dash_settings.png" alt="AndroCoins Dashboard" />
+                                        <img src="imgs/a_today_actions.png" alt="AndroCoins Dashboard" />
                                     </a>
                                 </div>
                             </div>
                             <div class="carousel-caption">
-                                <h4>Стартовый экран (Dashboard)</h4>
+                                <h4>Стартовый экран</h4>
                                 <br/>
-                                <p>Отображение расходов за текущий день.
+                                <p>Отображение расходов за текущий день с возможностью редактирования.
                                 Быстрый доступ к основным функциям и настройкам приложения</p>
                             </div>
                         </div>
@@ -105,25 +105,24 @@
                             <div class="row-fluid">
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_exp.png" alt="AndroCoins Expence" />
+                                        <img src="imgs/a_editor.png" alt="AndroCoins Expence" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_exp_cat.png" alt="AndroCoins Expence" />
+                                        <img src="imgs/a_edit_today.png" alt="AndroCoins Expence" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_exp_comment.png" alt="AndroCoins Expence" />
+                                        <img src="imgs/a_editor_summary.png" alt="AndroCoins Expence" />
                                     </a>
                                 </div>
                             </div>
                             <div class="carousel-caption">
-                                <h4>Добавление записи о новом расходе</h4>
+                                <h4>Редактирование расходов</h4>
                                 <br/>
-                                <p>Добавление нового или редактирование существующего расхода.
-                                    Ввод комментария к расходу. Выбор категории расхода</p>
+                                <p>Добавление нового или редактирование существующего расхода. Ввод текстового примечания</p>
                             </div>
                         </div>
                         <!-- categories screen -->
@@ -131,17 +130,17 @@
                             <div class="row-fluid">
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_cats.png" alt="AndroCoins Categories" />
+                                        <img src="imgs/a_categories.png" alt="AndroCoins Categories" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_cat_details.png" alt="AndroCoins Categories" />
+                                        <img src="imgs/a_category_details.png" alt="AndroCoins Categories" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_cats_edit.png" alt="AndroCoins Categories" />
+                                        <img src="imgs/a_category_actions.png" alt="AndroCoins Categories" />
                                     </a>
                                 </div>
                             </div>
@@ -151,30 +150,29 @@
                                 <p>Управление списком категорий расходов. Просмотр статистики по отдельной категории.</p>
                             </div>
                         </div>
-                        <!-- edit today and reports -->
+                        <!-- reports -->
                         <div class="item">
                             <div class="row-fluid">
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_today.png" alt="AndroCoins Reports" />
+                                        <img src="imgs/a_report.png" alt="AndroCoins Reports" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_rep_today.png" alt="AndroCoins Reports" />
+                                        <img src="imgs/a_report_menu.png" alt="AndroCoins Reports" />
                                     </a>
                                 </div>
                                 <div class="span4">
                                     <a class="thumbnail-without-border" href="#">
-                                        <img src="imgs/a_rep_week.png" alt="AndroCoins Reports" />
+                                        <img src="imgs/a_report_date_picker.png" alt="AndroCoins Reports" />
                                     </a>
                                 </div>
                             </div>
                             <div class="carousel-caption">
-                                <h4>Расходы: редактирование и статистика</h4>
+                                <h4>Расходы: просмотр статистики</h4>
                                 <br/>
-                                <p>Редактирование расходов за текущий день. Просмотр статистической информации о
-                                зарегистрированнх отчетах за разные периоды времени.</p>
+                                <p>Просмотр статистической информации о зарегистрированнх отчетах за разные периоды времени.</p>
                             </div>
                         </div>
                     </div>
