aboutme linket to google-plus profile

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                     <div class="nav-collapse pull-right">
                         <ul class="nav" style="font-size: 12pt;">
-                            <li><a href="about.html">Обо мне</a></li>
+                            <li><a href="https://plus.google.com/u/0/115957464425093610158/about" target="_blank">Обо мне</a></li>
                         </ul>
                     </div>
 
