--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="website">
+<html ng-app="webSiteApp">
     <head>
         <title>gshockv@gmail.com</title>
         <script type="text/javascript" src="js/angular.min.js"></script>
@@ -21,7 +21,7 @@
                 <h3 class="text-muted">Vitaly Gashock</h3>
             </div>
 
-            <div ng-view></div>
+            <ng-view></ng-view>
         </div>
     </body>
 </html>
