--- a/index.html
+++ b/index.html
@@ -2,26 +2,32 @@
 <html ng-app="webSiteApp">
     <head>
         <title>gshockv@gmail.com</title>
-        <script type="text/javascript" src="js/angular.min.js"></script>
-        <script type="text/javascript" src="js/website.js"></script>
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="app/css/bootstrap.min.css">
+        <link rel="stylesheet" href="app/css/main.css">
     </head>
-    <body ng-controller="MainCtrl">
+    <body ng-controller="MainController">
         
         <div class="container">
             <div class="header">
                 <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Главная</a></li>
-                    <li><a href="#projects">Проекты</a></li>
-                    <li><a href="#blog">Блог</a></li>
-                    <li><a href="#about">Обо мне</a></li>
+                    <li ng-class="{active: routeIs('/')}"><a href="#/">Главная</a></li>
+                    <li ng-class="{active: routeIs('/projects')}"><a href="#/projects">Проекты</a></li>
+                    <li ng-class="{active: routeIs('/blog')}"><a href="#/blog">Блог</a></li>
+                    <li ng-class="{active: routeIs('/about')}"><a href="#/about">Обо мне</a></li>
                 </ul>
                 <h3 class="text-muted">Vitaly Gashock</h3>
             </div>
 
             <ng-view></ng-view>
         </div>
+
+        <script type="text/javascript" src="app/lib/angular.min.js"></script>
+        <script type="text/javascript" src="app/js/app.js"></script>
+        <script type="text/javascript" src="app/js/controllers/MainController.js"></script>
+        <script type="text/javascript" src="app/js/controllers/ProjectsController.js"></script>
+        <script type="text/javascript" src="app/js/controllers/BlogController.js"></script>
+        <script type="text/javascript" src="app/js/controllers/AboutController.js"></script>
+
     </body>
 </html>
