--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
         <meta name="description" content="vitaly gashock personal website"/>
 
-        <title>gshockv@gmail.com</title>
+        <title>gshockv.github.io</title>
 
         <link rel="stylesheet" href="app/css/bootstrap.min.css">
         <link rel="stylesheet" href="app/css/main.css">
@@ -20,7 +20,7 @@
                     <li ng-class="{active: routeIs('/blog')}"><a href="#/blog">Блог</a></li>
                     <li ng-class="{active: routeIs('/about')}"><a href="#/about">Обо мне</a></li>
                 </ul>
-                <h4 class="text-muted">Vitaly Gashock</h4>
+                <h2 class="text-muted">gshockv.github.io</h2>
             </div>
 
             <ng-view></ng-view>
