--- a/app/about.html
+++ b/app/about.html
@@ -1,3 +1,94 @@
-<div class="jumbotron" ng-controller="AboutController">
-	<h3>Резюма</h3>
+<div ng-controller="AboutController">
+	<div class="row">
+		<div class="col-md-8">
+			<h1 class="text-muted my-username">Приветствую!</h1>
+		</div>
+		<div class="col-md-4">
+			<img src="app/imgs/brown-avatar.jpg" class="img-circle img-avatar">
+		</div>
+	</div>
+	<hr/>
+	<p>Меня зовут Виталий. Я из Одессы и я разработчик программного обеспечения. В данный момент
+		я занимаюсь разработкой приложений под Android. До этого разрабатывал UI
+		динамических веб-приложений на GWT, а до этого была Java... Вообщем, последние года 4 я занимался больше UI, чем суровыми серверными вещами.
+		<br/>Также очень нравится JavaScript во всех его проявлениях: браузер, сервер, chrome apps etc.
+	</p>
+	<p>
+		<h3 class="text-muted">Контакты для связи</h3>
+		<ul>
+			<li><b>Email:</b> <a href="mailto:gshockv@gmail.com">gshockv@gmail.com</a></li>
+			<li><b>Twitter:</b> <a href="https://twitter.com/vgashock" target="_blank">twitter.com/vgashock</a></li>
+			<li><b>Google+:</b> <a href="https://plus.google.com/u/0/115957464425093610158/" target="_blank">Vitaly Gashock</a></li>
+		</ul>
+	</p>
+
+	<hr/>
+	<p>
+		<h3 class="text-muted">Навыки</h3>
+		<ul>
+			<li>Программирую под Android, программирую на Java, программирую на JavaScript</li>
+			<li>Технологии, IDE и прочие сокращения (JEE, JAXB, XSLT etc.) перечислять не буду</li>
+		</ul>
+	</p>
+	<hr/>
+	<p>
+		<h3 class="text-muted">Места работы</h3>
+		<br/><i>Сентябрь 2011 - настоящее время</i>
+		<br/><b>Компания:</b> Мамба (<a href="http://corp.mamba.ru" target="_blank">corp.mamba.ru</a>)
+		<br/><b>Позиция:</b> Android-разработчик
+		<br/><b>Проект:</b> <a href="https://play.google.com/store/apps/details?id=ru.mamba.client" target="_blank">Официальное Android-приложение сервиса</a>
+		<br/><b>Технологии:</b> Android SDK, JSON, Git
+
+		<br/>
+		<br/><i>Апрель 2010 - Сентябрь 2011</i>
+		<br/><b>Компания:</b> iPark (<a href="http://www.iparkcorp.com/" target="_blank">www.iparkcorp.com/</a>)
+		<br/><b>Позиция:</b> Senior GWT (UI) developer
+		<br/><b>Проект:</b> <a href="http://www.iparkcorp.com/project-exp" target="_blank">Experika.com</a> - job-сайт с социальной составляющей 
+		<br/><b>Технологии:</b> Google Web toolkit (GWT) 2.x, mvp4g framework, Google GIN, JSON processing, Git
+
+		<br/>
+		<br/><i>Февраль 2010 - Апрель 2011</i>
+		<br/><b>Компания:</b> Postindustria
+		<br/><b>Позиция:</b> Java/GWT remote developer
+		<br/><b>Проект:</b> Участие в разработке социальной CRM-системы
+		<br/><b>Технологии:</b> Google Web toolkit (GWT) 2.x, mvp4g framework, RestGWT, JSON processing, Git
+
+		<br/>
+		<br/><i>Май 2009 - Январь 2010</i>
+		<br/><b>Компания:</b> Hexfinity
+		<br/><b>Позиция:</b> Java developer
+		<br/><b>Проект:</b> Система учета времени, тайм-треккинг
+		<br/><b>Технологии:</b> Spring framework, JSF, RichFaces, Facelets, Hibernate ORM, jQuery, MySQL, Tomcat, svn
+
+		<br/>
+		<br/><i>Март 2009 - Май 2009</i>
+		<br/><b>Компания:</b> VizualTech
+		<br/><b>Позиция:</b> Java developer
+		<br/><b>Проект:</b> Серверное приложение для организации потокового медиа-вещания
+		<br/><b>Технологии:</b> Spring framework, Red5 RTMP server, JSON processing
+
+		<br/>
+		<br/><i>Апрель 2008 - Март 2009</i>
+		<br/><b>Компания:</b> Миратех (<a href="http://www.miratech.ua/" target="_blank">www.miratech.ua</a>)
+		<br/><b>Позиция:</b> Java developer
+		<br/><b>Проект:</b> Мобильный клиент CRM-системы
+		<br/><b>Технологии:</b> J2ME, Nokia S60 SDK, hsqldb mobile db engine, j2mepolish, XML processing 
+
+		<br/>
+		<br/><b>Проект:</b> Серверное приложение для интеграции разнородных источников данных (sql, xml etc.)
+		<br/><b>Технологии:</b> Spring framework, Spring WebServices, Hibernate ORM, 
+		<br/>
+		<br/>
+		<p>. . .</p>
+	</p>
+
+	<hr/>
+	<p>
+		<h3 class="text-muted">Дополнительно</h3>
+		<ul>
+			<li><b>Дата рождения:</b> 14 ноября 1981 г.</li>
+			<li><b>Знание языков:</b> Русский, Украинский, Английский</li>
+			<li><b>Хобби:</b> Pet-projects, фотография, чтение</li>
+		</ul>
+	</p>
 </div>
