--- a/app/home.html
+++ b/app/home.html
@@ -1,3 +1,20 @@
 <div class="jumbotron" ng-controller="HomeController">
-	<h3>Главная страница</h3>
+	<div class="row">
+		<div class="col-md-4">
+			<img src="app/imgs/androcoins/today-framed.png" class="promo-big-img"/>
+		</div>
+		<div class="col-md-8 promo-desc">
+			<h3 class="title">AndroCoins</h3>
+			<hr class="promo-hr"/>
+			<p>Простое приложение, с помощью которого можно записывать свои карманные расходы. И учитывать.</p>
+			
+			<div class="promo-buttons">
+				<a href="https://play.google.com/store/apps/details?id=org.androcoins" target="_blank">
+  					<img alt="Get it on Google Play" src="https://developer.android.com/images/brand/ru_generic_rgb_wo_45.png" />
+				</a>
+				<a href="#/projects/androcoins"><button type="button" class="btn btn-info">Узнать больше</button></a>
+			</div>
+		</div>
+	</div>
+
 </div>
