--- a/app/home.html
+++ b/app/home.html
@@ -1,20 +1,39 @@
-<div class="jumbotron" ng-controller="HomeController">
-	<div class="row">
-		<div class="col-md-4">
-			<img src="app/imgs/androcoins/today-framed.png" class="promo-big-img"/>
-		</div>
-		<div class="col-md-8 promo-desc">
-			<h3 class="title">AndroCoins</h3>
-			<hr class="promo-hr"/>
-			<p>Простое приложение, с помощью которого можно записывать свои карманные расходы. И учитывать.</p>
-			
-			<div class="promo-buttons">
-				<a href="https://play.google.com/store/apps/details?id=org.androcoins" target="_blank">
-  					<img alt="Get it on Google Play" src="https://developer.android.com/images/brand/ru_generic_rgb_wo_45.png" />
-				</a>
-				<a href="#/projects/androcoins"><button type="button" class="btn btn-info">Узнать больше</button></a>
+<div ng-controller="HomeController">
+	<div class="jumbotron">
+		<div class="row">
+			<div class="col-md-4">
+				<img src="app/imgs/androcoins/today-framed.png" class="promo-big-img"/>
+			</div>
+			<div class="col-md-8 promo-desc">
+				<h3 class="title">AndroCoins</h3>
+				<hr class="promo-hr"/>
+				<p>Простое приложение, с помощью которого можно записывать свои карманные расходы. И учитывать.</p>
+				
+				<div class="promo-buttons">
+					<a href="https://play.google.com/store/apps/details?id=org.androcoins" target="_blank">
+	  					<img alt="Get it on Google Play" src="https://developer.android.com/images/brand/ru_generic_rgb_wo_45.png" />
+					</a>
+					<a href="#/projects/androcoins"><button type="button" class="btn btn-info">Узнать больше</button></a>
+				</div>
 			</div>
 		</div>
 	</div>
 
+	<div class="row marketing">
+        <div class="col-lg-6">
+          <h4>Статья из бложика первая</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum <a href="#/blog">Читать</a></p>
+
+          <br/>
+          <h4>Сложно о Android</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum <a href="#/blog">Читать</a></p>
+        </div>
+
+        <div class="col-lg-6">
+          <h4>О влиянии лунного света на прорастание телеграфных столбов</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum <a href="#/blog">Читать</a></p>
+        </div>
+      </div>
+
 </div>
+
