--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
 
         <script type="text/javascript" src="app/lib/angular.min.js"></script>
+        <script type="text/javascript" src="app/lib/underscore.min.js"></script>
         <script type="text/javascript" src="app/js/app.js"></script>
         <script type="text/javascript" src="app/js/controllers/NavController.js"></script>
         <script type="text/javascript" src="app/js/controllers/HomeController.js"></script>
