different controllers for single post and list

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <script type="text/javascript" src="app/js/controllers/HomeController.js"></script>
         <script type="text/javascript" src="app/js/controllers/ProjectsController.js"></script>
         <script type="text/javascript" src="app/js/controllers/BlogController.js"></script>
+        <script type="text/javascript" src="app/js/controllers/BlogPostController.js"></script>
         <script type="text/javascript" src="app/js/controllers/AboutController.js"></script>
 
     </body>
