--- a/app/home.html
+++ b/app/home.html
@@ -22,7 +22,7 @@
 	<div class="row marketing">
 		<div class="col-md-6" ng-repeat="post in posts">
 			<h4>{{post.title}}</h4>
-			<p>{{post.description}} <a href="{{post.url}}">Читать&nbsp;дальше</a></p>
+			<p>{{post.description}} <a href="#/blog/{{post.url}}">Читать&nbsp;дальше</a></p>
 		</div>
     </div>
 </div>
