--- a/app/blog-post.html
+++ b/app/blog-post.html
@@ -1,3 +1,3 @@
 <div ng-controller="BlogController">
-	<span ng-bind-html="postContent">{{postContent}}</span>
+	<div ng-bind-html-unsafe="postContent"></div>
 </div>
