welcoming blog post

--- a/app/blog-content/first-post.html
+++ b/app/blog-content/first-post.html
@@ -1,8 +1,40 @@
-This tutorial walks you through creating your first packaged app. Packaged apps are structured similarly to extensions so current developers will recognize the manifest and packaging methods. When you're done, you'll just need to produce a zip file of your code and assets in order to publish your app.
+<div>
+<h4>Давайте знакомиться</h4>
+<p>
+	Меня зовут Виталий. Я разработчик программного обеспечения. Пишу код под Android на Java, увлекаюсь писанием 
+	на JavaScript'е. И, в принципе, я готов помочь с выполнением вашего проекта.
+	Более подробная инфа (можно даже назвать, CV) есть на странице <a href="#/about">Обо мне</a>. 
+	В этом первом посте раскажу немного о этом сайте, его целях, технологиях etc.
+</p>
+<p>
+	<h4>Зачем понадобилось создать этот сайт</h4>
+	Можно начать с того, что мне просто захотелось это сделать.
+	Но есть и основные цели:
+	<ul>
+		<li>показывать на главной большой баннер с проектом и картинкой</li>
+		<li>научиться делать сайты</li>
+		<li>сделать онлайн-портфолио своих <a href="#/projects">проектов</a></li>
+		<li>вынести в онлайн <a href="#/projects">резюме (CV)</a></li>
+		<li>сделать небольшой движок блога</li>
+		<li>освоить модные и молодежные технологии веба</li>
+	</ul>
+</p>
+<p>
+	<h4>Результат</h4>
+	Результат перед вами. Это статический сайт: имею ввиду, что он не привязан (по крайней мере пока) к бэк-енду. Вся логика построения страниц, навигация и прочее 
+	выполняется строго на клиент-сайде. Хостится сайт на <a href="http://pages.github.com/" target="_blank">GitHub Pages</a>.
+</p>
+<p>
+	Из чего это все приготовлено:
+	<ul>
+		<li><a href="http://pages.github.com/" target="_blank">GitHub Pages</a></li>
+		<li><a href="http://angularjs.org/" target="_blank">AngularJS</a></li>
+		<li><a href="http://underscorejs.org/" target="_blank">underscore.js</a></li>
+		<li><a href="getbootstrap.com" target="_blank">Twitter Bootstrap</a></li>
+		<li><a href="http://nodejs.org/" target="_blank">Node.js</a></li>
+	</ul>
+	Тут упомяну, что Node.js используется только для локального хостинга, т.е. при разработке и отладке скриптов и верстки
+</p>
+<p>Вот вроде и все, что хотел сказать при встрече. Дальше будет больше записей в <a href="#/blog">бложике.</a> Ну и You Are Welcome!</p>
 
-A packaged app contains these components:
-
-The manifest tells Chrome about your app, what it is, how to launch it and the extra permissions that it requires.
-The background script is used to create the event page responsible for managing the app life cycle.
-All code must be included in the package. This includes HTML, JS, CSS and Native Client modules.
-All icons and other assets must be included in the package as well.
+</div>
