welcoming blog post fixes

--- a/app/blog-content/first-post.html
+++ b/app/blog-content/first-post.html
@@ -30,7 +30,7 @@
 		<li><a href="http://pages.github.com/" target="_blank">GitHub Pages</a></li>
 		<li><a href="http://angularjs.org/" target="_blank">AngularJS</a></li>
 		<li><a href="http://underscorejs.org/" target="_blank">underscore.js</a></li>
-		<li><a href="getbootstrap.com" target="_blank">Twitter Bootstrap</a></li>
+		<li><a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a></li>
 		<li><a href="http://nodejs.org/" target="_blank">Node.js</a></li>
 	</ul>
 	Тут упомяну, что Node.js используется только для локального хостинга, т.е. при разработке и отладке скриптов и верстки
