link to sources

--- a/app/blog-content/first-post.html
+++ b/app/blog-content/first-post.html
@@ -33,7 +33,8 @@
 		<li><a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a></li>
 		<li><a href="http://nodejs.org/" target="_blank">Node.js</a></li>
 	</ul>
-	Тут упомяну, что Node.js используется только для локального хостинга, т.е. при разработке и отладке скриптов и верстки
+	Node.js используется только для локального хостинга, т.е. при разработке и отладке скриптов и верстки.
+	Исходные тексты этого сайта вместе с контентом <a href="https://github.com/gshockv/gshockv.github.com" target="_blank">открыты.</a>
 </p>
 <p>Вот вроде и все, что хотел сказать при встрече. Дальше будет больше записей в <a href="#/blog">бложике.</a> Ну и You Are Welcome!</p>
 
