--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header" ng-controller="NavController">
                 <ul class="nav nav-pills pull-right">
                     <li ng-class="{active: routeIs('/')}"><a href="#/">Главная</a></li>
-                    <li ng-class="{active: routeIs('/projects')}"><a href="#/projects">Проекты</a></li>
+                    <li ng-class="{active: routeIs('/projects')}"><a href="#/projects">Мои Проекты</a></li>
                 </ul>
                 <h3 class="text-muted">gshockv.github.io</h3>
             </div>
