--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <script type="text/javascript" src="app/js/controllers/NavController.js"></script>
         <script type="text/javascript" src="app/js/controllers/HomeController.js"></script>
         <script type="text/javascript" src="app/js/controllers/ProjectsController.js"></script>
+        <script type="text/javascript" src="app/js/controllers/ProjectDetailsController.js"></script>
 
     </body>
 </html>
