linkedin profile link

--- a/app/home.html
+++ b/app/home.html
@@ -19,6 +19,7 @@
 		<h3 class="text-muted">Контакты для связи</h3>
 		<ul>
 			<li><b>Email:</b> <a href="mailto:gshockv@gmail.com">gshockv@gmail.com</a></li>
+            <li><b>LinkedIn:</b> <a href="https://ua.linkedin.com/in/vitaly-gashock-3a6a711b" target="_blank">LinkedIn Profile</a>
 			<li><b>Twitter:</b> <a href="https://twitter.com/vgashock" target="_blank">twitter.com/vgashock</a></li>
 			<li><b>Google+:</b> <a href="https://plus.google.com/u/0/115957464425093610158/" target="_blank">Vitaly Gashock</a></li>
 		</ul>
