homepage wording small fixes

--- a/app/home.html
+++ b/app/home.html
@@ -9,8 +9,7 @@
 	</div>
 	<hr/>
 	<p>Меня зовут Виталий. <br/>
-        Я из Одессы и я разработчик программного обеспечения. В данный момент
-		я занимаюсь разработкой приложений под Android последние 4 года. До этого разрабатывал UI
+        Я из Одессы и я разработчик программного обеспечения. Последние года 4 разрабатываю Android-приложения. Использую Java и Kotlin. До этого разрабатывал UI
 		динамических веб-приложений на GWT, а до этого была Java... Вообщем, последние лет 6 я занимался больше UI, чем суровыми серверными вещами.
         Но я еще в курсе, что такое JEE, Spring, Hibernate, JPA, Play Framework и прочие технологии.
 		<br/>Также очень нравится JavaScript во всех его проявлениях: браузер, сервер, chrome apps etc.
@@ -32,7 +31,7 @@
 	<p>
 		<ul>
 			<li>Программирую под Android, программирую на Java, программирую на JavaScript</li>
-    			<li>Технологии, IDE и прочие сокращения (JEE, JAXB, XSLT etc.) перечислять не буду</li>
+    		<li>Технологии, IDE и прочие сокращения (JEE, JAXB, XSLT etc.) перечислять не буду</li>
 		</ul>
 	</p>
 	<hr/>
